clean up mobile positioning and spacing #175 and fix bug where logo section gets hidden on small screens

--- a/source/assets/stylesheets/utilities/_positioning.scss
+++ b/source/assets/stylesheets/utilities/_positioning.scss
@@ -116,6 +116,6 @@
 }
 
 // move an element up so it overlaps with a preceding .fill-browser element
-.fill-browser-overlap {
+@include breakpointify('.fill-browser-overlap', $default: true, $sizes: 'medium') {
 	margin-top: -100vh;
 }
